-CustomLayout now supports sizeable. -Small fixes to IPanel. -GridLayout and OrderedLayout now fetch alignment constants from client side package.
svn changeset:2858/svn branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/panel/panel.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/panel/panel.css
@@ -32,6 +32,10 @@
 	background: #fff;
 }
 
+.i-panel-light-caption {
+	overflow: hidden;
+}
+
 .i-panel-nocaption {
 	height: 9px;
 }
